Fix horizontal scrollbar in homepage

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -1,6 +1,7 @@
 .home {
   --wrapper-max-width: 1110px;
   position: relative;
+  overflow: hidden;
 
   &::before {
     content: '';
